--- a/basic1/index.html
+++ b/basic1/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+<style>
+    *{margin: 0; padding: 0;}
+    h1,h2,h3,h4,h5,h6{
+    font-size: 16px; /* 글자의 크기 */
+    font-weight: normal; /* 글자의 두께 */
+    }
+    h1{background-color: darkgreen;
+    color: aliceblue;}
+    h2{background-color: aqua;}
+    h3{background-color: blueviolet;}
+</style>
 </head>
 <body>
-    반갑습니다.
-</body>
-</html>
+<!-- 주석처리 - 코드에 영향을 주지 않고 메모용으로 사용 -->
+    <!-- 
+<태그이름>내용</태그이름>
+<열린태그>내용</닫힌태그>
+<시작태그>내용</종료태그> -->
+
+<h1>제목입니다1</h1>
+<h2>제목입니다2</h2>
+<h3>제목입니다3</h3>
+<h4>제목입니다4</h4>
+<h5>제목입니다5</h5>
+<h6>제목입니다6</h6>
