--- a/basic1/index.html
+++ b/basic1/index.html
@@ -15,6 +15,15 @@
     color: aliceblue;}
     h2{background-color: aqua;}
     h3{background-color: blueviolet;}
+    h3.행심{color: aquamarine; /* 글자의 색 */}
+    h3.행순{background-color: bisque;}
+
+p{background-color: cadetblue;
+ width: 400px; /* 영역의 넓이 */
+ transition: 0.3s; /* 1s=1000ms */
+}
+p:hover{background-color: coral;
+}
 </style>
 </head>
 <body>
@@ -26,7 +35,9 @@
 
 <h1>제목입니다1</h1>
 <h2>제목입니다2</h2>
-<h3>제목입니다3</h3>
+<h3 class="행심">제목입니다3</h3>
+<h3 class="행순">제목입니다3_반갑습니다</h3>
 <h4>제목입니다4</h4>
 <h5>제목입니다5</h5>
 <h6>제목입니다6</h6>
+<p>문단을 나타내는 태그</p>
